vs19_clangcl fixed

--- a/vs19_clangcl/CMakeLists.txt
+++ b/vs19_clangcl/CMakeLists.txt
@@ -1,3 +1,3 @@
-﻿cmake_minimum_required(VERSION 2.8) # Проверка версии CMake.
+﻿cmake_minimum_required(VERSION 2.8)
 project(Main)
 add_executable(Main Main.cpp)
