--- a/sanitizers_test/CMakeLists.txt
+++ b/sanitizers_test/CMakeLists.txt
@@ -1,6 +1,12 @@
 #https://github.com/arsenm/sanitizers-cmake
 cmake_minimum_required(VERSION 3.6)
 project(asan_test)
+
+set(SANITIZE_ADDRESS On)
+set(SANITIZE_MEMORY Off)
+set(SANITIZE_THREAD Off)
+set(SANITIZE_UNDEFINED Off)
+
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/externals/sanitizers-cmake/cmake" ${CMAKE_MODULE_PATH})
 find_package(Sanitizers)
 sanitizer_add_blacklist_file("blacklist.txt")
